Document overflow resolved

--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ body {
   -webkit-font-smoothing: subpixel-antialiased !important;
   text-rendering: optimizeLegibility !important;
 }
-body {
+html, body {
   overflow-x: hidden;
 }
 a {
